# crewai-kya

./: README.md  pyproject.toml
crewai_kya/: __init__.py  card.py  identity.py  middleware.py  trust_gate.py
crewai_kya.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_integration.py
